# lolz

./: CMakeLists.txt  Inconsolata-Regular.h  client.cpp  client.hpp  deleter.hpp  globjects.cpp  globjects.hpp  gnu.h  main.cpp  main.hpp  nonmvcp.hpp  readme  vec.hpp
